--- a/.gitignore
+++ b/.gitignore
@@ -560,3 +560,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# HuggingFace models
+models/
