--- a/hello-phi-3/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
+++ b/hello-phi-3/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\hello-phi-3\hello-phi-3.csproj" />
+  </ItemGroup>
+
 </Project>
