--- a/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
+++ b/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\hello-phi-3\hello-phi-3.csproj" />
   </ItemGroup>
 
