Update project packages references.

--- a/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
+++ b/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>hello_phi_3.consoleapp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Configurations>Debug;Release;Debug_Cuda;Release_Cuda;Debug_DirectML;Release_DirectML</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,3 +18,4 @@
   </ItemGroup>
 
 </Project>
+ 
