--- a/hello-phi-3/hello-phi-3.csproj
+++ b/hello-phi-3/hello-phi-3.csproj
@@ -5,15 +5,11 @@
     <RootNamespace>hello_phi_3</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;Debug_Cuda;Release_Cuda;Debug_DirectML;Release_DirectML</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.19.2" />
-	<PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.4.0" Condition=" '$(Configuration)' == 'Debug' OR '$(Configuration)' == 'Release' " />
-	<PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.19.2" Condition=" '$(Configuration)' == 'Debug_Cuda' OR '$(Configuration)' == 'Release_Cuda' " />
-	<PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI.Cuda" Version="0.4.0" Condition=" '$(Configuration)' == 'Debug_Cuda' OR '$(Configuration)' == 'Release_Cuda' " />
-	<PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI.DirectML" Version="0.4.0" Condition=" '$(Configuration)' == 'Debug_DirectML' OR '$(Configuration)' == 'Release_DirectML' " />
+	<PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.4.0" />
   </ItemGroup>
      
 </Project>
