--- a/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
+++ b/hello-phi-3.consoleapp/hello-phi-3.consoleapp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
